--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,5 +6,5 @@
     }
   },
   "ConnectionStrings": 
-  {"DefaultConnection":"Server=localhost,1433;DataBase=skinet;User ID=SA;Password=Password@1;TrustServerCertificate=True"}
+  {"DefaultConnection":"Server=localhost,1433;DataBase=skinet;User Id=SA;Password=Password@1;TrustServerCertificate=True"}
 }
